--- a/01 - JavaScript Drum Kit/index-VUE.html
+++ b/01 - JavaScript Drum Kit/index-VUE.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-  <div class="keys" id='app'>
-    <sound-div v-for="item in keysList" v-bind:item="item"></sound-div>
-    <audio-file v-for="item in keysList" v-bind:item="item"></audio-file>
+  <div class="keys" id='key-divs'>
+    <sound-div v-for="(item,index) in keysList" :item="item" :key="item.keyCode"></sound-div>
   </div>
 
   <script src="vue_scripts.js" type="text/javascript"></script>
-  <script src="scripts.js" type="text/javascript"></script>
 </body>
 
 </html>
+<transition></transition>
