Make it a little prettier

--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Drums</title>
+        <link rel="stylesheet" href="index_style.css">
     </head>
     <body>
-        <h1>There are a couple of versions</h1>
-        <ol>
-            <li><a href="index-MINE.html">My Working JavaScript Only Version</a></li>
-            <li><a href="index-START.html">WESBOS's starter </a></li>
+        <h2>There are a couple of versions</h2>
+        <ul>
+            <li><a href="index-MINE.html">JavaScript Only (Mine)</a></li>
+            <li><a href="index-VUE.html">Fully working vue</a></li>
+            <li><a href="index-START.html">WESBOS's starter</a></li>
             <li><a href="index-FINISHED.html">WESBOS's Finished</a></li>
-            <li><a href="index-VUE.html">My Not working VUE</a></li>
-        </ol>
+        </ul>
     </body>
 </html>
