Added VUE watch and top level control

--- a/01 - JavaScript Drum Kit/index-VUE.html
+++ b/01 - JavaScript Drum Kit/index-VUE.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-  <div class="keys" id='key-divs'>
-    <sound-div v-for="(item,index) in keysList" :item="item" :key="item.keyCode"></sound-div>
-  </div>
-
+  <div id='key-divs'></div>
   <script src="vue_scripts.js" type="text/javascript"></script>
 </body>
 
